[package]
name = "cookie-session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-session = "0.5"

env_logger = "0.9"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"